package ca.utoronto.utm.paint;

public class Points {
}
